--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -83,6 +83,7 @@
     <string name="faviconContentDescription">Kedvenc ikon</string>
     <string name="closeContentDescription">Bezárás</string>
     <string name="closeAllTabsMenuItem">Összes lap bezárása</string>
+    <string name="closeTab">Lap bezárása</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Adatvédelmi műszerfal</string>
