--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -83,6 +83,7 @@
     <string name="faviconContentDescription">Parankinio piktograma</string>
     <string name="closeContentDescription">Uždaryti</string>
     <string name="closeAllTabsMenuItem">Uždaryti visas korteles</string>
+    <string name="closeTab">Uždaryti kortelė</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Privatumo valdymo skydelis</string>
