--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -83,6 +83,7 @@
     <string name="faviconContentDescription">Ikona skrótu</string>
     <string name="closeContentDescription">Zamknij</string>
     <string name="closeAllTabsMenuItem">Zamknij wszystkie karty</string>
+    <string name="closeTab">Zamknij karta</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Panel zarządzania prywatnością</string>
