Change strings to yes/no and add translations

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="duckDuckGoLogoDescription">Лого на DuckDuckGo</string>
     <string name="appDescription">Поверителност, опростена</string>
+    <string name="yes">да</string>
+    <string name="no">Не</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Посетете Настройки, за да търсите и сърфирате с DuckDuckGo всеки път.</string>
