--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="duckDuckGoLogoDescription">Logotip DuckDuckGo</string>
     <string name="appDescription">Poenostavljena zasebnost</string>
+    <string name="yes">Da</string>
+    <string name="no">Ne</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Vsakič obiščite Nastavitve za iskanje in brskanje z DuckDuckGo.</string>
