--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="duckDuckGoLogoDescription">DuckDuckGo-logo</string>
     <string name="appDescription">Tietosuojaa, yksinkertaisesti</string>
+    <string name="yes">Joo</string>
+    <string name="no">Ei</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Siirry asetuksiin hakeaksesi ja selaillaksesi aina DuckDuckGolla.</string>
@@ -83,6 +85,7 @@
     <string name="faviconContentDescription">Suosikkikuvake</string>
     <string name="closeContentDescription">Sulje</string>
     <string name="closeAllTabsMenuItem">Sulje kaikki välilehdet</string>
+    <string name="closeTab">Sulje välilehti</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Tietosuojan ohjauspaneeli</string>
