--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="duckDuckGoLogoDescription">Λογότυπο DuckDuckGo</string>
     <string name="appDescription">Ιδιωτικότητα, απλοποιημένη</string>
+    <string name="yes">Ναι</string>
+    <string name="no">Οχι</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Επισκεφθείτε τις Ρυθμίσεις για να εκτελείτε κάθε φορά αναζήτηση και περιήγηση με το DuckDuckGo.</string>
@@ -83,6 +85,7 @@
     <string name="faviconContentDescription">Favicon</string>
     <string name="closeContentDescription">Κλείσιμο</string>
     <string name="closeAllTabsMenuItem">Κλείσιμο όλων των καρτελών</string>
+    <string name="closeTab">Κλείσιμο καρτέλα</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Πίνακας εργαλείων ιδιωτικότητας</string>
