--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="duckDuckGoLogoDescription">„DuckDuckGo“ logotipas</string>
     <string name="appDescription">Supaprastintas privatumas</string>
+    <string name="yes">Taip</string>
+    <string name="no">Ne</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Jei visada norite ieškoti ir naršyti naudojant „DuckDuckGo“, apsilankykite nustatymuose.</string>
@@ -83,6 +85,7 @@
     <string name="faviconContentDescription">Parankinio piktograma</string>
     <string name="closeContentDescription">Uždaryti</string>
     <string name="closeAllTabsMenuItem">Uždaryti visas korteles</string>
+    <string name="closeTab">Uždaryti kortelė</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Privatumo valdymo skydelis</string>
