--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -2,6 +2,8 @@
 
     <string name="duckDuckGoLogoDescription">Logoul DuckDuckGo</string>
     <string name="appDescription">Despre confidențialitate, pe scurt</string>
+    <string name="yes">Da</string>
+    <string name="no">Nu</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Accesați „Setări” pentru a căuta și naviga cu DuckDuckGo de fiecare dată.</string>
@@ -83,6 +85,7 @@
     <string name="faviconContentDescription">Favicon</string>
     <string name="closeContentDescription">Închidere</string>
     <string name="closeAllTabsMenuItem">Închidere toate filele</string>
+    <string name="closeTab">Închidere nouă</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Tabloul de bord privind confidențialitatea</string>
