--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,6 +18,8 @@
 
     <string name="duckDuckGoLogoDescription">Логотип DuckDuckGo</string>
     <string name="appDescription">Максимум конфиденциальности, минимум усилий</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
 
     <!-- Onboarding Activity -->
     <string name="onboardingDefaultBrowserDescription">Чтобы сделать DuckDuckGo поисковой системой по умолчанию, перейдите в «Настройки».</string>
@@ -99,6 +101,7 @@
     <string name="faviconContentDescription">Значок сайта</string>
     <string name="closeContentDescription">Закрыть</string>
     <string name="closeAllTabsMenuItem">Закрыть все вкладки</string>
+    <string name="closeTab">Закрыть вкладка</string>
 
     <!-- Privacy Dashboard Activities -->
     <string name="privacyDashboardActivityTitle">Панель конфиденциальности</string>
