--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-Bug fixes and other improvements.
+We fixed a few bugs, including a user-reported issue where search settings could be lost after closing the app or using the fire button.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
