Updated release notes and version number for new release - 5.37.0

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,5 @@
 ## What's new in this release?
-We fixed a few bugs, including a user-reported issue where search settings could be lost after closing the app or using the fire button.
+Bug fixes and other improvements.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
