Showing confirmation dialog to user to confirm download

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,6 +148,8 @@
     <string name="fireMenu">Clear Data</string>
     <string name="fireClearAll">Clear All Tabs and Data</string>
     <string name="fireCancel">Cancel</string>
+    <string name="fireContinue">Continue</string>
+    <string name="download_filename">Download %1$s ?</string>
     <string name="fireDataCleared">Data cleared</string>
     <string name="fireProcessName" translatable="false">:fire</string>
 
