--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,6 +150,8 @@
     <string name="fireCancel">Cancel</string>
     <string name="fireContinue">Continue</string>
     <string name="download_filename">Save %1$s ?</string>
+    <string name="keep_both">Keep both</string>
+    <string name="replace">Replace</string>
     <string name="fireDataCleared">Data cleared</string>
     <string name="fireProcessName" translatable="false">:fire</string>
 
